<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_images"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/show_favorites"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_date"
                android:title="@string/sort_date"/>
            <item
                android:id="@+id/sort_name"
                android:title="@string/sort_name"/>
            <item
                android:id="@+id/sort_size"
                android:title="@string/sort_size"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_theme"
        android:icon="@drawable/ic_dark_mode"
        android:title="@string/dark_mode"
        app:showAsAction="never"/>

</menu>
